assgn4/obj/y.output
   0  $accept : program $end

   1  $$1 :

   2  program : $$1 declList

   3  declList : decl
   4           | declList decl

   5  decl : vardecl
   6       | funDecl

   7  vardecl : typeSpecifier ID LSQ_BRKT INTCONST RSQ_BRKT SEMICLN
   8          | typeSpecifier ID SEMICLN

   9  typeSpecifier : KWD_INT
  10                | KWD_CHAR
  11                | KWD_VOID

  12  $$2 :

  13  funDecl : fundPre LPAREN formalDeclList $$2 RPAREN funBody
  14          | fundPre LPAREN RPAREN funBody

  15  fundPre : typeSpecifier ID

  16  formalDeclList : formalDecl
  17                 | formalDecl COMMA formalDeclList

  18  formalDecl : typeSpecifier ID
  19             | typeSpecifier ID LSQ_BRKT RSQ_BRKT

  20  $$3 :

  21  funBody : $$3 LCRLY_BRKT localDeclList statementList RCRLY_BRKT

  22  localDeclList :
  23                | vardecl
  24                | localDeclList vardecl

  25  statementList :
  26                | statement
  27                | statementList statement

  28  statement : compoundStmt
  29            | assignStmt
  30            | condStmt
  31            | loopStmt
  32            | returnStmt

  33  loopStmt : KWD_WHILE LPAREN expression RPAREN statement

  34  returnStmt : KWD_RETURN SEMICLN
  35             | KWD_RETURN expression SEMICLN

  36  compoundStmt : LCRLY_BRKT statementList RCRLY_BRKT

  37  assignStmt : var OPER_ASGN expression SEMICLN
  38             | expression SEMICLN

  39  condStmt : KWD_IF LPAREN expression RPAREN statement
  40           | KWD_IF LPAREN expression RPAREN statement KWD_ELSE statement

  41  var : ID
  42      | ID LSQ_BRKT addExpr RSQ_BRKT

  43  expression : addExpr
  44             | expression relop addExpr

  45  relop : OPER_EQ
  46        | OPER_GT
  47        | OPER_LT
  48        | OPER_GTE
  49        | OPER_LTE
  50        | OPER_NEQ

  51  addExpr : term
  52          | addExpr addop term

  53  addop : OPER_ADD
  54        | OPER_SUB

  55  term : factor
  56       | term mulop factor

  57  mulop : OPER_MUL
  58        | OPER_DIV

  59  factor : LPAREN expression RPAREN
  60         | var
  61         | funcCallExpr
  62         | INTCONST
  63         | CHARCONST

  64  funcCallExpr : ID LPAREN argList RPAREN
  65               | ID LPAREN RPAREN

  66  argList : expression
  67          | argList COMMA expression

state 0
	$accept : . program $end  (0)
	$$1 : .  (1)

	.  reduce 1

	program  goto 1
	$$1  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : $$1 . declList  (2)

	KWD_INT  shift 3
	KWD_CHAR  shift 4
	KWD_VOID  shift 5
	.  error

	declList  goto 6
	decl  goto 7
	vardecl  goto 8
	typeSpecifier  goto 9
	funDecl  goto 10
	fundPre  goto 11


state 3
	typeSpecifier : KWD_INT .  (9)

	.  reduce 9


state 4
	typeSpecifier : KWD_CHAR .  (10)

	.  reduce 10


state 5
	typeSpecifier : KWD_VOID .  (11)

	.  reduce 11


state 6
	program : $$1 declList .  (2)
	declList : declList . decl  (4)

	KWD_INT  shift 3
	KWD_CHAR  shift 4
	KWD_VOID  shift 5
	$end  reduce 2

	decl  goto 12
	vardecl  goto 8
	typeSpecifier  goto 9
	funDecl  goto 10
	fundPre  goto 11


state 7
	declList : decl .  (3)

	.  reduce 3


state 8
	decl : vardecl .  (5)

	.  reduce 5


state 9
	vardecl : typeSpecifier . ID LSQ_BRKT INTCONST RSQ_BRKT SEMICLN  (7)
	vardecl : typeSpecifier . ID SEMICLN  (8)
	fundPre : typeSpecifier . ID  (15)

	ID  shift 13
	.  error


state 10
	decl : funDecl .  (6)

	.  reduce 6


state 11
	funDecl : fundPre . LPAREN formalDeclList $$2 RPAREN funBody  (13)
	funDecl : fundPre . LPAREN RPAREN funBody  (14)

	LPAREN  shift 14
	.  error


state 12
	declList : declList decl .  (4)

	.  reduce 4


state 13
	vardecl : typeSpecifier ID . LSQ_BRKT INTCONST RSQ_BRKT SEMICLN  (7)
	vardecl : typeSpecifier ID . SEMICLN  (8)
	fundPre : typeSpecifier ID .  (15)

	SEMICLN  shift 15
	LSQ_BRKT  shift 16
	LPAREN  reduce 15


state 14
	funDecl : fundPre LPAREN . formalDeclList $$2 RPAREN funBody  (13)
	funDecl : fundPre LPAREN . RPAREN funBody  (14)

	RPAREN  shift 17
	KWD_INT  shift 3
	KWD_CHAR  shift 4
	KWD_VOID  shift 5
	.  error

	typeSpecifier  goto 18
	formalDeclList  goto 19
	formalDecl  goto 20


state 15
	vardecl : typeSpecifier ID SEMICLN .  (8)

	.  reduce 8


state 16
	vardecl : typeSpecifier ID LSQ_BRKT . INTCONST RSQ_BRKT SEMICLN  (7)

	INTCONST  shift 21
	.  error


state 17
	funDecl : fundPre LPAREN RPAREN . funBody  (14)
	$$3 : .  (20)

	.  reduce 20

	funBody  goto 22
	$$3  goto 23


state 18
	formalDecl : typeSpecifier . ID  (18)
	formalDecl : typeSpecifier . ID LSQ_BRKT RSQ_BRKT  (19)

	ID  shift 24
	.  error


state 19
	funDecl : fundPre LPAREN formalDeclList . $$2 RPAREN funBody  (13)
	$$2 : .  (12)

	.  reduce 12

	$$2  goto 25


state 20
	formalDeclList : formalDecl .  (16)
	formalDeclList : formalDecl . COMMA formalDeclList  (17)

	COMMA  shift 26
	RPAREN  reduce 16


state 21
	vardecl : typeSpecifier ID LSQ_BRKT INTCONST . RSQ_BRKT SEMICLN  (7)

	RSQ_BRKT  shift 27
	.  error


state 22
	funDecl : fundPre LPAREN RPAREN funBody .  (14)

	.  reduce 14


state 23
	funBody : $$3 . LCRLY_BRKT localDeclList statementList RCRLY_BRKT  (21)

	LCRLY_BRKT  shift 28
	.  error


state 24
	formalDecl : typeSpecifier ID .  (18)
	formalDecl : typeSpecifier ID . LSQ_BRKT RSQ_BRKT  (19)

	LSQ_BRKT  shift 29
	RPAREN  reduce 18
	COMMA  reduce 18


state 25
	funDecl : fundPre LPAREN formalDeclList $$2 . RPAREN funBody  (13)

	RPAREN  shift 30
	.  error


state 26
	formalDeclList : formalDecl COMMA . formalDeclList  (17)

	KWD_INT  shift 3
	KWD_CHAR  shift 4
	KWD_VOID  shift 5
	.  error

	typeSpecifier  goto 18
	formalDeclList  goto 31
	formalDecl  goto 20


state 27
	vardecl : typeSpecifier ID LSQ_BRKT INTCONST RSQ_BRKT . SEMICLN  (7)

	SEMICLN  shift 32
	.  error


28: shift/reduce conflict (shift 3, reduce 22) on KWD_INT
28: shift/reduce conflict (shift 4, reduce 22) on KWD_CHAR
28: shift/reduce conflict (shift 5, reduce 22) on KWD_VOID
state 28
	funBody : $$3 LCRLY_BRKT . localDeclList statementList RCRLY_BRKT  (21)
	localDeclList : .  (22)

	KWD_INT  shift 3
	KWD_CHAR  shift 4
	KWD_VOID  shift 5
	LPAREN  reduce 22
	KWD_IF  reduce 22
	KWD_WHILE  reduce 22
	KWD_RETURN  reduce 22
	LCRLY_BRKT  reduce 22
	RCRLY_BRKT  reduce 22
	ID  reduce 22
	INTCONST  reduce 22
	CHARCONST  reduce 22

	vardecl  goto 33
	typeSpecifier  goto 34
	localDeclList  goto 35


state 29
	formalDecl : typeSpecifier ID LSQ_BRKT . RSQ_BRKT  (19)

	RSQ_BRKT  shift 36
	.  error


state 30
	funDecl : fundPre LPAREN formalDeclList $$2 RPAREN . funBody  (13)
	$$3 : .  (20)

	.  reduce 20

	funBody  goto 37
	$$3  goto 23


state 31
	formalDeclList : formalDecl COMMA formalDeclList .  (17)

	.  reduce 17


state 32
	vardecl : typeSpecifier ID LSQ_BRKT INTCONST RSQ_BRKT SEMICLN .  (7)

	.  reduce 7


state 33
	localDeclList : vardecl .  (23)

	.  reduce 23


state 34
	vardecl : typeSpecifier . ID LSQ_BRKT INTCONST RSQ_BRKT SEMICLN  (7)
	vardecl : typeSpecifier . ID SEMICLN  (8)

	ID  shift 38
	.  error


35: shift/reduce conflict (shift 39, reduce 25) on LPAREN
35: shift/reduce conflict (shift 40, reduce 25) on KWD_IF
35: shift/reduce conflict (shift 41, reduce 25) on KWD_WHILE
35: shift/reduce conflict (shift 42, reduce 25) on KWD_RETURN
35: shift/reduce conflict (shift 43, reduce 25) on LCRLY_BRKT
35: shift/reduce conflict (shift 44, reduce 25) on ID
35: shift/reduce conflict (shift 45, reduce 25) on INTCONST
35: shift/reduce conflict (shift 46, reduce 25) on CHARCONST
state 35
	funBody : $$3 LCRLY_BRKT localDeclList . statementList RCRLY_BRKT  (21)
	localDeclList : localDeclList . vardecl  (24)
	statementList : .  (25)

	LPAREN  shift 39
	KWD_INT  shift 3
	KWD_IF  shift 40
	KWD_WHILE  shift 41
	KWD_CHAR  shift 4
	KWD_RETURN  shift 42
	KWD_VOID  shift 5
	LCRLY_BRKT  shift 43
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	RCRLY_BRKT  reduce 25

	vardecl  goto 47
	typeSpecifier  goto 34
	statementList  goto 48
	statement  goto 49
	assignStmt  goto 50
	var  goto 51
	expression  goto 52
	loopStmt  goto 53
	returnStmt  goto 54
	compoundStmt  goto 55
	condStmt  goto 56
	addExpr  goto 57
	term  goto 58
	factor  goto 59
	funcCallExpr  goto 60


state 36
	formalDecl : typeSpecifier ID LSQ_BRKT RSQ_BRKT .  (19)

	.  reduce 19


state 37
	funDecl : fundPre LPAREN formalDeclList $$2 RPAREN funBody .  (13)

	.  reduce 13


state 38
	vardecl : typeSpecifier ID . LSQ_BRKT INTCONST RSQ_BRKT SEMICLN  (7)
	vardecl : typeSpecifier ID . SEMICLN  (8)

	SEMICLN  shift 15
	LSQ_BRKT  shift 16
	.  error


state 39
	factor : LPAREN . expression RPAREN  (59)

	LPAREN  shift 39
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	.  error

	var  goto 61
	expression  goto 62
	addExpr  goto 57
	term  goto 58
	factor  goto 59
	funcCallExpr  goto 60


state 40
	condStmt : KWD_IF . LPAREN expression RPAREN statement  (39)
	condStmt : KWD_IF . LPAREN expression RPAREN statement KWD_ELSE statement  (40)

	LPAREN  shift 63
	.  error


state 41
	loopStmt : KWD_WHILE . LPAREN expression RPAREN statement  (33)

	LPAREN  shift 64
	.  error


state 42
	returnStmt : KWD_RETURN . SEMICLN  (34)
	returnStmt : KWD_RETURN . expression SEMICLN  (35)

	LPAREN  shift 39
	SEMICLN  shift 65
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	.  error

	var  goto 61
	expression  goto 66
	addExpr  goto 57
	term  goto 58
	factor  goto 59
	funcCallExpr  goto 60


43: shift/reduce conflict (shift 39, reduce 25) on LPAREN
43: shift/reduce conflict (shift 40, reduce 25) on KWD_IF
43: shift/reduce conflict (shift 41, reduce 25) on KWD_WHILE
43: shift/reduce conflict (shift 42, reduce 25) on KWD_RETURN
43: shift/reduce conflict (shift 43, reduce 25) on LCRLY_BRKT
43: shift/reduce conflict (shift 44, reduce 25) on ID
43: shift/reduce conflict (shift 45, reduce 25) on INTCONST
43: shift/reduce conflict (shift 46, reduce 25) on CHARCONST
state 43
	compoundStmt : LCRLY_BRKT . statementList RCRLY_BRKT  (36)
	statementList : .  (25)

	LPAREN  shift 39
	KWD_IF  shift 40
	KWD_WHILE  shift 41
	KWD_RETURN  shift 42
	LCRLY_BRKT  shift 43
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	RCRLY_BRKT  reduce 25

	statementList  goto 67
	statement  goto 49
	assignStmt  goto 50
	var  goto 51
	expression  goto 52
	loopStmt  goto 53
	returnStmt  goto 54
	compoundStmt  goto 55
	condStmt  goto 56
	addExpr  goto 57
	term  goto 58
	factor  goto 59
	funcCallExpr  goto 60


state 44
	var : ID .  (41)
	var : ID . LSQ_BRKT addExpr RSQ_BRKT  (42)
	funcCallExpr : ID . LPAREN argList RPAREN  (64)
	funcCallExpr : ID . LPAREN RPAREN  (65)

	LPAREN  shift 68
	LSQ_BRKT  shift 69
	RPAREN  reduce 41
	SEMICLN  reduce 41
	COMMA  reduce 41
	OPER_ADD  reduce 41
	OPER_SUB  reduce 41
	OPER_MUL  reduce 41
	OPER_DIV  reduce 41
	OPER_LTE  reduce 41
	OPER_GTE  reduce 41
	OPER_LT  reduce 41
	OPER_GT  reduce 41
	OPER_EQ  reduce 41
	OPER_NEQ  reduce 41
	OPER_ASGN  reduce 41
	RSQ_BRKT  reduce 41


state 45
	factor : INTCONST .  (62)

	.  reduce 62


state 46
	factor : CHARCONST .  (63)

	.  reduce 63


state 47
	localDeclList : localDeclList vardecl .  (24)

	.  reduce 24


state 48
	funBody : $$3 LCRLY_BRKT localDeclList statementList . RCRLY_BRKT  (21)
	statementList : statementList . statement  (27)

	LPAREN  shift 39
	KWD_IF  shift 40
	KWD_WHILE  shift 41
	KWD_RETURN  shift 42
	LCRLY_BRKT  shift 43
	RCRLY_BRKT  shift 70
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	.  error

	statement  goto 71
	assignStmt  goto 50
	var  goto 51
	expression  goto 52
	loopStmt  goto 53
	returnStmt  goto 54
	compoundStmt  goto 55
	condStmt  goto 56
	addExpr  goto 57
	term  goto 58
	factor  goto 59
	funcCallExpr  goto 60


state 49
	statementList : statement .  (26)

	.  reduce 26


state 50
	statement : assignStmt .  (29)

	.  reduce 29


state 51
	assignStmt : var . OPER_ASGN expression SEMICLN  (37)
	factor : var .  (60)

	OPER_ASGN  shift 72
	SEMICLN  reduce 60
	OPER_ADD  reduce 60
	OPER_SUB  reduce 60
	OPER_MUL  reduce 60
	OPER_DIV  reduce 60
	OPER_LTE  reduce 60
	OPER_GTE  reduce 60
	OPER_LT  reduce 60
	OPER_GT  reduce 60
	OPER_EQ  reduce 60
	OPER_NEQ  reduce 60


state 52
	assignStmt : expression . SEMICLN  (38)
	expression : expression . relop addExpr  (44)

	SEMICLN  shift 73
	OPER_LTE  shift 74
	OPER_GTE  shift 75
	OPER_LT  shift 76
	OPER_GT  shift 77
	OPER_EQ  shift 78
	OPER_NEQ  shift 79
	.  error

	relop  goto 80


state 53
	statement : loopStmt .  (31)

	.  reduce 31


state 54
	statement : returnStmt .  (32)

	.  reduce 32


state 55
	statement : compoundStmt .  (28)

	.  reduce 28


state 56
	statement : condStmt .  (30)

	.  reduce 30


state 57
	expression : addExpr .  (43)
	addExpr : addExpr . addop term  (52)

	OPER_ADD  shift 81
	OPER_SUB  shift 82
	RPAREN  reduce 43
	SEMICLN  reduce 43
	COMMA  reduce 43
	OPER_LTE  reduce 43
	OPER_GTE  reduce 43
	OPER_LT  reduce 43
	OPER_GT  reduce 43
	OPER_EQ  reduce 43
	OPER_NEQ  reduce 43

	addop  goto 83


state 58
	addExpr : term .  (51)
	term : term . mulop factor  (56)

	OPER_MUL  shift 84
	OPER_DIV  shift 85
	RPAREN  reduce 51
	SEMICLN  reduce 51
	COMMA  reduce 51
	OPER_ADD  reduce 51
	OPER_SUB  reduce 51
	OPER_LTE  reduce 51
	OPER_GTE  reduce 51
	OPER_LT  reduce 51
	OPER_GT  reduce 51
	OPER_EQ  reduce 51
	OPER_NEQ  reduce 51
	RSQ_BRKT  reduce 51

	mulop  goto 86


state 59
	term : factor .  (55)

	.  reduce 55


state 60
	factor : funcCallExpr .  (61)

	.  reduce 61


state 61
	factor : var .  (60)

	.  reduce 60


state 62
	expression : expression . relop addExpr  (44)
	factor : LPAREN expression . RPAREN  (59)

	RPAREN  shift 87
	OPER_LTE  shift 74
	OPER_GTE  shift 75
	OPER_LT  shift 76
	OPER_GT  shift 77
	OPER_EQ  shift 78
	OPER_NEQ  shift 79
	.  error

	relop  goto 80


state 63
	condStmt : KWD_IF LPAREN . expression RPAREN statement  (39)
	condStmt : KWD_IF LPAREN . expression RPAREN statement KWD_ELSE statement  (40)

	LPAREN  shift 39
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	.  error

	var  goto 61
	expression  goto 88
	addExpr  goto 57
	term  goto 58
	factor  goto 59
	funcCallExpr  goto 60


state 64
	loopStmt : KWD_WHILE LPAREN . expression RPAREN statement  (33)

	LPAREN  shift 39
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	.  error

	var  goto 61
	expression  goto 89
	addExpr  goto 57
	term  goto 58
	factor  goto 59
	funcCallExpr  goto 60


state 65
	returnStmt : KWD_RETURN SEMICLN .  (34)

	.  reduce 34


state 66
	returnStmt : KWD_RETURN expression . SEMICLN  (35)
	expression : expression . relop addExpr  (44)

	SEMICLN  shift 90
	OPER_LTE  shift 74
	OPER_GTE  shift 75
	OPER_LT  shift 76
	OPER_GT  shift 77
	OPER_EQ  shift 78
	OPER_NEQ  shift 79
	.  error

	relop  goto 80


state 67
	statementList : statementList . statement  (27)
	compoundStmt : LCRLY_BRKT statementList . RCRLY_BRKT  (36)

	LPAREN  shift 39
	KWD_IF  shift 40
	KWD_WHILE  shift 41
	KWD_RETURN  shift 42
	LCRLY_BRKT  shift 43
	RCRLY_BRKT  shift 91
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	.  error

	statement  goto 71
	assignStmt  goto 50
	var  goto 51
	expression  goto 52
	loopStmt  goto 53
	returnStmt  goto 54
	compoundStmt  goto 55
	condStmt  goto 56
	addExpr  goto 57
	term  goto 58
	factor  goto 59
	funcCallExpr  goto 60


state 68
	funcCallExpr : ID LPAREN . argList RPAREN  (64)
	funcCallExpr : ID LPAREN . RPAREN  (65)

	LPAREN  shift 39
	RPAREN  shift 92
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	.  error

	var  goto 61
	expression  goto 93
	addExpr  goto 57
	term  goto 58
	factor  goto 59
	funcCallExpr  goto 60
	argList  goto 94


state 69
	var : ID LSQ_BRKT . addExpr RSQ_BRKT  (42)

	LPAREN  shift 39
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	.  error

	var  goto 61
	addExpr  goto 95
	term  goto 58
	factor  goto 59
	funcCallExpr  goto 60


state 70
	funBody : $$3 LCRLY_BRKT localDeclList statementList RCRLY_BRKT .  (21)

	.  reduce 21


state 71
	statementList : statementList statement .  (27)

	.  reduce 27


state 72
	assignStmt : var OPER_ASGN . expression SEMICLN  (37)

	LPAREN  shift 39
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	.  error

	var  goto 61
	expression  goto 96
	addExpr  goto 57
	term  goto 58
	factor  goto 59
	funcCallExpr  goto 60


state 73
	assignStmt : expression SEMICLN .  (38)

	.  reduce 38


state 74
	relop : OPER_LTE .  (49)

	.  reduce 49


state 75
	relop : OPER_GTE .  (48)

	.  reduce 48


state 76
	relop : OPER_LT .  (47)

	.  reduce 47


state 77
	relop : OPER_GT .  (46)

	.  reduce 46


state 78
	relop : OPER_EQ .  (45)

	.  reduce 45


state 79
	relop : OPER_NEQ .  (50)

	.  reduce 50


state 80
	expression : expression relop . addExpr  (44)

	LPAREN  shift 39
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	.  error

	var  goto 61
	addExpr  goto 97
	term  goto 58
	factor  goto 59
	funcCallExpr  goto 60


state 81
	addop : OPER_ADD .  (53)

	.  reduce 53


state 82
	addop : OPER_SUB .  (54)

	.  reduce 54


state 83
	addExpr : addExpr addop . term  (52)

	LPAREN  shift 39
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	.  error

	var  goto 61
	term  goto 98
	factor  goto 59
	funcCallExpr  goto 60


state 84
	mulop : OPER_MUL .  (57)

	.  reduce 57


state 85
	mulop : OPER_DIV .  (58)

	.  reduce 58


state 86
	term : term mulop . factor  (56)

	LPAREN  shift 39
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	.  error

	var  goto 61
	factor  goto 99
	funcCallExpr  goto 60


state 87
	factor : LPAREN expression RPAREN .  (59)

	.  reduce 59


state 88
	condStmt : KWD_IF LPAREN expression . RPAREN statement  (39)
	condStmt : KWD_IF LPAREN expression . RPAREN statement KWD_ELSE statement  (40)
	expression : expression . relop addExpr  (44)

	RPAREN  shift 100
	OPER_LTE  shift 74
	OPER_GTE  shift 75
	OPER_LT  shift 76
	OPER_GT  shift 77
	OPER_EQ  shift 78
	OPER_NEQ  shift 79
	.  error

	relop  goto 80


state 89
	loopStmt : KWD_WHILE LPAREN expression . RPAREN statement  (33)
	expression : expression . relop addExpr  (44)

	RPAREN  shift 101
	OPER_LTE  shift 74
	OPER_GTE  shift 75
	OPER_LT  shift 76
	OPER_GT  shift 77
	OPER_EQ  shift 78
	OPER_NEQ  shift 79
	.  error

	relop  goto 80


state 90
	returnStmt : KWD_RETURN expression SEMICLN .  (35)

	.  reduce 35


state 91
	compoundStmt : LCRLY_BRKT statementList RCRLY_BRKT .  (36)

	.  reduce 36


state 92
	funcCallExpr : ID LPAREN RPAREN .  (65)

	.  reduce 65


state 93
	expression : expression . relop addExpr  (44)
	argList : expression .  (66)

	OPER_LTE  shift 74
	OPER_GTE  shift 75
	OPER_LT  shift 76
	OPER_GT  shift 77
	OPER_EQ  shift 78
	OPER_NEQ  shift 79
	RPAREN  reduce 66
	COMMA  reduce 66

	relop  goto 80


state 94
	funcCallExpr : ID LPAREN argList . RPAREN  (64)
	argList : argList . COMMA expression  (67)

	RPAREN  shift 102
	COMMA  shift 103
	.  error


state 95
	var : ID LSQ_BRKT addExpr . RSQ_BRKT  (42)
	addExpr : addExpr . addop term  (52)

	OPER_ADD  shift 81
	OPER_SUB  shift 82
	RSQ_BRKT  shift 104
	.  error

	addop  goto 83


state 96
	assignStmt : var OPER_ASGN expression . SEMICLN  (37)
	expression : expression . relop addExpr  (44)

	SEMICLN  shift 105
	OPER_LTE  shift 74
	OPER_GTE  shift 75
	OPER_LT  shift 76
	OPER_GT  shift 77
	OPER_EQ  shift 78
	OPER_NEQ  shift 79
	.  error

	relop  goto 80


state 97
	expression : expression relop addExpr .  (44)
	addExpr : addExpr . addop term  (52)

	OPER_ADD  shift 81
	OPER_SUB  shift 82
	RPAREN  reduce 44
	SEMICLN  reduce 44
	COMMA  reduce 44
	OPER_LTE  reduce 44
	OPER_GTE  reduce 44
	OPER_LT  reduce 44
	OPER_GT  reduce 44
	OPER_EQ  reduce 44
	OPER_NEQ  reduce 44

	addop  goto 83


state 98
	addExpr : addExpr addop term .  (52)
	term : term . mulop factor  (56)

	OPER_MUL  shift 84
	OPER_DIV  shift 85
	RPAREN  reduce 52
	SEMICLN  reduce 52
	COMMA  reduce 52
	OPER_ADD  reduce 52
	OPER_SUB  reduce 52
	OPER_LTE  reduce 52
	OPER_GTE  reduce 52
	OPER_LT  reduce 52
	OPER_GT  reduce 52
	OPER_EQ  reduce 52
	OPER_NEQ  reduce 52
	RSQ_BRKT  reduce 52

	mulop  goto 86


state 99
	term : term mulop factor .  (56)

	.  reduce 56


state 100
	condStmt : KWD_IF LPAREN expression RPAREN . statement  (39)
	condStmt : KWD_IF LPAREN expression RPAREN . statement KWD_ELSE statement  (40)

	LPAREN  shift 39
	KWD_IF  shift 40
	KWD_WHILE  shift 41
	KWD_RETURN  shift 42
	LCRLY_BRKT  shift 43
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	.  error

	statement  goto 106
	assignStmt  goto 50
	var  goto 51
	expression  goto 52
	loopStmt  goto 53
	returnStmt  goto 54
	compoundStmt  goto 55
	condStmt  goto 56
	addExpr  goto 57
	term  goto 58
	factor  goto 59
	funcCallExpr  goto 60


state 101
	loopStmt : KWD_WHILE LPAREN expression RPAREN . statement  (33)

	LPAREN  shift 39
	KWD_IF  shift 40
	KWD_WHILE  shift 41
	KWD_RETURN  shift 42
	LCRLY_BRKT  shift 43
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	.  error

	statement  goto 107
	assignStmt  goto 50
	var  goto 51
	expression  goto 52
	loopStmt  goto 53
	returnStmt  goto 54
	compoundStmt  goto 55
	condStmt  goto 56
	addExpr  goto 57
	term  goto 58
	factor  goto 59
	funcCallExpr  goto 60


state 102
	funcCallExpr : ID LPAREN argList RPAREN .  (64)

	.  reduce 64


state 103
	argList : argList COMMA . expression  (67)

	LPAREN  shift 39
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	.  error

	var  goto 61
	expression  goto 108
	addExpr  goto 57
	term  goto 58
	factor  goto 59
	funcCallExpr  goto 60


state 104
	var : ID LSQ_BRKT addExpr RSQ_BRKT .  (42)

	.  reduce 42


state 105
	assignStmt : var OPER_ASGN expression SEMICLN .  (37)

	.  reduce 37


106: shift/reduce conflict (shift 109, reduce 39) on KWD_ELSE
state 106
	condStmt : KWD_IF LPAREN expression RPAREN statement .  (39)
	condStmt : KWD_IF LPAREN expression RPAREN statement . KWD_ELSE statement  (40)

	KWD_ELSE  shift 109
	LPAREN  reduce 39
	KWD_IF  reduce 39
	KWD_WHILE  reduce 39
	KWD_RETURN  reduce 39
	LCRLY_BRKT  reduce 39
	RCRLY_BRKT  reduce 39
	ID  reduce 39
	INTCONST  reduce 39
	CHARCONST  reduce 39


state 107
	loopStmt : KWD_WHILE LPAREN expression RPAREN statement .  (33)

	.  reduce 33


state 108
	expression : expression . relop addExpr  (44)
	argList : argList COMMA expression .  (67)

	OPER_LTE  shift 74
	OPER_GTE  shift 75
	OPER_LT  shift 76
	OPER_GT  shift 77
	OPER_EQ  shift 78
	OPER_NEQ  shift 79
	RPAREN  reduce 67
	COMMA  reduce 67

	relop  goto 80


state 109
	condStmt : KWD_IF LPAREN expression RPAREN statement KWD_ELSE . statement  (40)

	LPAREN  shift 39
	KWD_IF  shift 40
	KWD_WHILE  shift 41
	KWD_RETURN  shift 42
	LCRLY_BRKT  shift 43
	ID  shift 44
	INTCONST  shift 45
	CHARCONST  shift 46
	.  error

	statement  goto 110
	assignStmt  goto 50
	var  goto 51
	expression  goto 52
	loopStmt  goto 53
	returnStmt  goto 54
	compoundStmt  goto 55
	condStmt  goto 56
	addExpr  goto 57
	term  goto 58
	factor  goto 59
	funcCallExpr  goto 60


state 110
	condStmt : KWD_IF LPAREN expression RPAREN statement KWD_ELSE statement .  (40)

	.  reduce 40


State 28 contains 3 shift/reduce conflicts.
State 35 contains 8 shift/reduce conflicts.
State 43 contains 8 shift/reduce conflicts.
State 106 contains 1 shift/reduce conflict.


37 terminals, 32 nonterminals
68 grammar rules, 111 states
